; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_peer.c_peer_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_peer.c_peer_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.peer = type { i64, i64, i64, i64, i64, i64, i64, i64, i32 }

@current_time = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @peer_reset(%struct.peer* %0) #0 {
  %2 = alloca %struct.peer*, align 8
  store %struct.peer* %0, %struct.peer** %2, align 8
  %3 = load %struct.peer*, %struct.peer** %2, align 8
  %4 = icmp eq %struct.peer* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %26

6:                                                ; preds = %1
  %7 = load i32, i32* @current_time, align 4
  %8 = load %struct.peer*, %struct.peer** %2, align 8
  %9 = getelementptr inbounds %struct.peer, %struct.peer* %8, i32 0, i32 8
  store i32 %7, i32* %9, align 8
  %10 = load %struct.peer*, %struct.peer** %2, align 8
  %11 = getelementptr inbounds %struct.peer, %struct.peer* %10, i32 0, i32 7
  store i64 0, i64* %11, align 8
  %12 = load %struct.peer*, %struct.peer** %2, align 8
  %13 = getelementptr inbounds %struct.peer, %struct.peer* %12, i32 0, i32 6
  store i64 0, i64* %13, align 8
  %14 = load %struct.peer*, %struct.peer** %2, align 8
  %15 = getelementptr inbounds %struct.peer, %struct.peer* %14, i32 0, i32 5
  store i64 0, i64* %15, align 8
  %16 = load %struct.peer*, %struct.peer** %2, align 8
  %17 = getelementptr inbounds %struct.peer, %struct.peer* %16, i32 0, i32 4
  store i64 0, i64* %17, align 8
  %18 = load %struct.peer*, %struct.peer** %2, align 8
  %19 = getelementptr inbounds %struct.peer, %struct.peer* %18, i32 0, i32 3
  store i64 0, i64* %19, align 8
  %20 = load %struct.peer*, %struct.peer** %2, align 8
  %21 = getelementptr inbounds %struct.peer, %struct.peer* %20, i32 0, i32 2
  store i64 0, i64* %21, align 8
  %22 = load %struct.peer*, %struct.peer** %2, align 8
  %23 = getelementptr inbounds %struct.peer, %struct.peer* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = load %struct.peer*, %struct.peer** %2, align 8
  %25 = getelementptr inbounds %struct.peer, %struct.peer* %24, i32 0, i32 0
  store i64 0, i64* %25, align 8
  br label %26

26:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
